overworked Assetclass card views to match with Volume and Quantity -> add Table change color for Invest classes to gold fix issue where data from csv wasnt pased correct in db all data from db is now displayed on screen except Hotdeals display all money in Mio € and short that to 2 digits after . fix issue where money or percent was showed as NaN now display 0 reduce font size from statename to 175 due to too large statenames

--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,7 @@ body
     width: 250%;
     height: 40%;
     background-color: var(--content-bg-color);
-    color: white;
+    color: #bfab60;
     border-radius: 10px;
     border: 2px solid white;
     text-align: center;
@@ -296,7 +296,7 @@ body
     width: 50%;
     color: #bfab60;
     font-weight: 700;
-    font-size: 200%;
+    font-size: 175%;
 }
 
 .card .hotdeal{
